# usb-gadget

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.ci/: build-kernel.sh  cargo-test-runner.sh  usb-gadget.config
.github/workflows/: build-cli.yml  rust.yml  test-dummy-hcd.yml
.misc/: build-kernel.sh  cargo-test-runner.sh  sync.sh  usb-gadget.config
examples/: custom_interface_device.rs  custom_interface_device_async.rs  custom_interface_device_split.rs  custom_interface_host.rs  printer.rs
examples/config/: audio.toml  composite.toml  ethernet.toml  mass-storage.toml  printer.toml  serial.toml  webcam.toml
src/: gadget.rs  ioctl.rs  lang.rs  lib.rs  udc.rs
src/function/: audio.rs  custom.rs  hid.rs  loopback.rs  midi.rs  mod.rs  msd.rs  net.rs  other.rs  printer.rs  serial.rs  sourcesink.rs  util.rs  video.rs
src/function/custom/: ffs.rs  mod.rs
src/function/custom/aio/: mod.rs  sys.rs
tests/: audio.rs  custom.rs  custom_host.rs  gadget.rs  hid.rs  loopback.rs  midi.rs  msd.rs  net.rs  other.rs  printer.rs  serial.rs  sourcesink.rs  tests.rs  uac1.rs  uac2.rs  udc.rs  video.rs
tests/common/: mod.rs
tests/custom/: main.rs  transfer.rs  zlp.rs
tests/custom/transfer/: async_io.rs  ctrl.rs  dmabuf.rs  mod.rs  pipelined.rs  sync.rs  throughput.rs
