[package]
name = "usb-gadget"
description = "Expose standard or fully custom USB peripherals (gadgets) through a USB device controller (UDC) on Linux."
categories = ["hardware-support", "os::linux-apis"]
keywords = ["usb", "gadget", "peripheral", "configfs", "functionfs"]
license = "Apache-2.0"
repository = "https://github.com/surban/usb-gadget"
authors = ["Sebastian Urban <surban@surban.net>", "usb-gadget authors"]
rust-version = "1.77"
version = "0.7.6"
edition = "2021"

[features]
default = []

[dependencies]
bitflags = "2.4"
byteorder = "1"
bytes = "1.4"
libc = "0.2"
log = "0.4"
macaddr = "1.0"
rustix = { version = "1", features = ["mount", "event", "system"] }
proc-mounts = "0.3"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.32", features = ["net", "rt", "sync"], optional = true }
uuid = "1"

[dev-dependencies]
env_logger = "0.11"
nusb = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["macros", "time"] }

[[example]]
name = "custom_interface_device_async"
required-features = ["tokio"]
doc-scrape-examples = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

